<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/monitoring_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="@string/available_cities"/>

    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/monitoring_cities"
        android:id="@+id/my_recycler_view"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

    <View
        android:id="@+id/view"
        android:layout_below="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="5dp"
        android:background="@color/black" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view" >

        <TextView
            android:id="@+id/temp_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/temp_info"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/hottest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/temp_info"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/hot_red"
            android:text="@string/hottest"
            />
        <TextView
            android:id="@+id/coolest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hottest"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/cyan"
            android:text="@string/coolest"
            />
    </RelativeLayout>
</RelativeLayout>
</ScrollView>